--- a/c-notes/1. 基础算法/1. 排序.md
+++ b/c-notes/1. 基础算法/1. 排序.md
@@ -3,6 +3,19 @@
 | 快速排序 |   $O(NlogN)$   |    $O(N^2)$    |   $O(NlogN)$   |   $O(logN)$    | 不稳定 |
 | 归并排序 |   $O(NlogN)$   |   $O(NlogN)$   |   $O(NlogN)$   |     $O(N)$     |  稳定  |
 
+java的api：
+
+```java
+// 对数组a的下标从fromIndex到toIndex-1的元素排序，注意：下标为toIndex的元素不参与排序*
+Arrays.sort(int[] q, fromIndex, toIndex)
+```
+
+go的api：
+
+```
+sort.Ints(q)
+```
+
 ## 1. 快速排序
 
 [AcWing 785. 快速排序](https://www.acwing.com/problem/content/787/)
