--- a/c-notes/1. 基础算法/2. 二分.md
+++ b/c-notes/1. 基础算法/2. 二分.md
@@ -2,9 +2,9 @@
 
 [AcWing 789. 数的范围](https://www.acwing.com/problem/content/791/)
 
-### 模板
+条件：数组有序或者拥有类似于有序的性质。
 
- 条件：数组有序或者拥有类似于有序的性质。
+假设目标值在闭区间[l, r]中， 每次将区间长度缩小一半，当l = r时，我们就找到了目标值。
 
 ```cpp
 /* 计算左边界，区间[l, r]被划分成[l, mid]和[mid + 1, r]时使用 */
@@ -29,26 +29,6 @@ int bsearch(int l, int r) {
     return r; // l或r都行，此时l==r
 }
 ```
-
-### 求边界
-
-![image-20201117152138165](assets/image-20201117152138165.png)
-
-绿色左边界点：
-
-+ 如果 mid 满足绿色条件，就是 $[l,mid],r = mid$
-+ 如果 mid 不满足绿色条件，就是 $[mid+1,r],l = mid+1$
-
-![image-20201117152906552](assets/image-20201117152906552.png)
-
-红色右边界点：
-
-+ 如果 mid 满足红色条件，就是 $[mid,r],l = mid$
-+ 如果 mid 不满足红色条件，就是 $[l,mid-1],r = mid-1$
-
-
-
-![image-20201117152730718](assets/image-20201117152730718.png)
 
 ## 2. 浮点数二分模板
 
