--- a/c-notes/1. 基础算法/1. 排序.md
+++ b/c-notes/1. 基础算法/1. 排序.md
@@ -91,7 +91,7 @@ void quick_sort(int q[], int l, int r)
 
 [AcWing 787. 归并排序](https://www.acwing.com/problem/content/789/)
 
-### 模板
+在归并步骤时，如果碰到相同元素的插入，每次都选择第1段（左边）的元素插入，则能使归并算法**稳定**。
 
 ```cpp
 void merge_sort(int q[], int l, int r)
@@ -121,26 +121,12 @@ void merge_sort(int q[], int l, int r)
 }
 ```
 
-### 算法处理
-
 核心思想：**分治**
 
 + 一分为二：将一个无序的数分成为两个数组。
 + 合二为一，将两个有序数组合并成为一个有序数组。
 
-算法步骤：
 
-1. 确定分界点，分为左右区间。
-2. 递归处理左右区间。
-3. 归并，将两个有序序列合并（使用双指针）。
-
-### 特殊处理
-
-+ 两个指针 $i = l, j = mid + 1$，分别指向两个区间的头部。
-+ 临时数组 $tmp[]$，指针 $k=0$。
-+ 进行大小比较，小的放入临时数组中，最后将剩余的数据数组放入临时数组。
-+ 最后将临时数组的结果放到原数组中。
-+ 在归并步骤时，如果碰到相同元素的插入，每次都选择第1段（左边）的元素插入，则能使归并算法**稳定**。
 
 
 
