--- a/c-notes/1. 基础算法/4. 前缀和、差分.md
+++ b/c-notes/1. 基础算法/4. 前缀和、差分.md
@@ -60,12 +60,12 @@ a 是 b 的前缀和；b 是 a 的差分。两者是逆运算。
 作用：中间一段数组发生了变化，输出发生变化后的序列。
 
 ```cpp
-int a[N], B[N];
+int a[N], b[N];
 
 // 核心代码，给区间[l, r]中的每个数加上c
 void insert(int l, int r, int c) {
-    B[l] += c;
-    B[r + 1] -= c;
+    b[l] += c;
+    b[r + 1] -= c;
 }
 
 // 初始化差分数组b
@@ -74,30 +74,30 @@ for (int i = 1; i <= n; i++) {
     insert(i, i, a[i]);
 }
 
-// 输出前缀和数组a,(经过变换后的矩阵)
+// 前缀和
 for (int i = 1; i <= n; i++) {
-    B[i] += B[i - 1];
-    printf("%d ", B[i]);
+    b[i] += b[i - 1];
+    printf("%d ", b[i]);
 }
 ```
 
-用 `insert(i, i, a[i])​` 与 `B[i] = a[i]` 初始化差分数组的区别在于，前者构造的差分数组 B[n] 等于-B[n - 1]，而后者等于 0。
+用 `insert(i, i, a[i])​` 与 `b[i] = a[i]` 初始化差分数组的区别在于，前者构造的差分数组 b[n] 等于-b[n - 1]，而后者等于 0。
 
-读入数组 a 和初始化差分数组 B 的过程可以合并在一起，注意遍历范围是 `1 ~ n`，在一些不涉及 a[i] 的题目中，不必要存储 a[i] 的值，只需要存储 B[i] 就足够。
+读入数组 a 和初始化差分数组 b 的过程可以合并在一起，注意遍历范围是 `1 ~ n`，在一些不涉及 a[i] 的题目中，不必要存储 a[i] 的值，只需要存储 b[i] 就足够。
 
 ### 二维差分
 
 [AcWing 798. 差分矩阵](https://www.acwing.com/problem/content/800/)
 
 ```cpp
-int B[N][N]; 
+int b[N][N]; 
 
 // 核心代码，给以(x1, y1)为左上角，(x2, y2)为右下角的子矩阵中的所有元素加上c
 void insert(int x1, int y1, int x2, int y2, int c) {
-    B[x1][y1] += c;
-    B[x2 + 1][y1] -= c;
-    B[x1][y2 + 1] -= c;
-    B[x2 + 1][y2 + 1] += c;
+    b[x1][y1] += c;
+    b[x2 + 1][y1] -= c;
+    b[x1][y2 + 1] -= c;
+    b[x2 + 1][y2 + 1] += c;
 }
 
 // 构造差分矩阵b
@@ -109,10 +109,10 @@ for (int i = 1; i <= n; i++) {
     }
 }
 
-// 输出前缀和数组a,(经过变换后的矩阵)
+// 前缀和数组a,(经过变换后的矩阵)
 for (int i = 1; i <= n; i++)
     for (int j = 1; j <= m; j++)
-        B[i][j] += B[i - 1][j] + B[i][j - 1] - B[i - 1][j - 1];
+        b[i][j] += b[i - 1][j] + b[i][j - 1] - b[i - 1][j - 1];
 ```
 
 其中一个子矩阵发生了变化，求出发生了变化后的矩阵。
