--- a/c-notes/1. 基础算法/4. 前缀和、差分.md
+++ b/c-notes/1. 基础算法/4. 前缀和、差分.md
@@ -95,9 +95,9 @@ int b[N][N];
 // 核心代码，给以(x1, y1)为左上角，(x2, y2)为右下角的子矩阵中的所有元素加上c
 void insert(int x1, int y1, int x2, int y2, int c) {
     b[x1][y1] += c;
-    b[x2 + 1][y1] -= c;
-    b[x1][y2 + 1] -= c;
-    b[x2 + 1][y2 + 1] += c;
+    b[x2 + 1][y1] -= c; // 超出区域就减
+    b[x1][y2 + 1] -= c; // 超出区域就减
+    b[x2 + 1][y2 + 1] += c; // 多减了加回来
 }
 
 // 构造差分矩阵b
@@ -109,7 +109,7 @@ for (int i = 1; i <= n; i++) {
     }
 }
 
-// 前缀和数组a,(经过变换后的矩阵)
+// 前缀和
 for (int i = 1; i <= n; i++)
     for (int j = 1; j <= m; j++)
         b[i][j] += b[i - 1][j] + b[i][j - 1] - b[i - 1][j - 1];
