二进制运算

--- a/c-notes/1. 基础算法/6. 位运算.md
+++ b/c-notes/1. 基础算法/6. 位运算.md
@@ -8,7 +8,7 @@
 
 ```cpp
 n >> k & 1   // 这里的 k 从 0 开始计数，求 n 的二进制表示的第 k 位数字
-lowbit(n) = n & -n  // 返回 n 的最后一位 1，例如101000返回1000
+n & -n  // n 的最后一位 1，例如101000返回1000
 ```
 
 + 右移，右边补1，相当于除以2
