--- a/c-notes/2. 数据结构/2. 栈与队列：单调队列、单调栈.md
+++ b/c-notes/2. 数据结构/2. 栈与队列：单调队列、单调栈.md
@@ -110,7 +110,7 @@ for (int i = 1; i <= n; i ++ )
     
     // code: 一般会在这里产生一个判断，取走stk[tt]的值
     
-    stk[ ++ tt] = i; // 插入在后，这里存的是下标
+    stk[ ++ tt] = x; // 插入在后，这里存的是值
 }
 ```
 
