--- a/c-notes/2. 数据结构/6. 堆.md
+++ b/c-notes/2. 数据结构/6. 堆.md
@@ -4,35 +4,42 @@
 
  [AcWing 839. 模拟堆](https://www.acwing.com/problem/content/841/)
 
-#### 1.1 普通模板
+堆就是一个完全二叉树。用一维数组存储，根节点是 1 号，左儿子是 2x，右儿子是 2x+1。
+
+小根堆：每个节点都是小于等于左右儿子的，根节点就是整个数据结构的最小值。
+
+对于任何节点，左儿子的值可能小于、等于或大于右儿子的值，但是父节点的值始终小于或等于它的子节点的值。
+
+### 2. 建堆
+
+为什么从 n/2 开始down？因为这是最后一个非叶节点。开始建堆的时候，元素是随机插入的，不能从根节点开始 down，要找到满足下面三个性质的节点：
+
+1. 左右儿子满足堆的性质。
+
+2. 下标最大（因为要往上遍历）
+
+3. 不是叶结点（叶节点一定满足堆的性质）
 
 ```cpp
-// h[N]存储堆中的值, h[1]是堆顶，x的左儿子是2x, 右儿子是2x + 1
+// h[N]存储堆中的值, h[1]是堆顶，x的左儿子是2x, 右儿子是2x + 1，size是堆的大小
 int h[N], size;
 
-// 构造一个小顶堆
-void down(int u)
-{
-    // u表示当前的节点，t表示要交换的目标节点
-    int t = u;
+// 构造一个小顶堆，u表示当前的节点
+void down(int u) {
+    int t = u; 
+    if (u * 2 <= size && h[u * 2] < h[t]) t = u * 2; // 和左儿子比较
+    if (u * 2 + 1 <= size && h[u * 2 + 1] < h[t]) t = u * 2 + 1; // 和右儿子比较
     
-    // 和左右儿子作比较，找出最小的那个儿子，t就是最小的那个儿子
-    if (u * 2 <= size && h[u * 2] < h[t]) t = u * 2;
-    if (u * 2 + 1 <= size && h[u * 2 + 1] < h[t]) t = u * 2 + 1;
-    
-    // 最小的儿子存在，就可以进行交换
-    if (u != t)
-    {
+    // 比儿子大，可以交换
+    if (u != t) {
         swap(h[u], h[t]);
-        down(t);
+        down(t); // 继续down
     }
 }
 
-// 构建小顶堆，一直想上交换
-void up(int u)
-{
-    while (u / 2 && h[u] < h[u / 2])
-    {
+// 构建小顶堆，一直向上交换
+void up(int u) {
+    while (u / 2 && h[u] < h[u / 2]) {
         swap(h[u], h[u / 2]);
         u >>= 1;
     }
@@ -75,9 +82,9 @@ void update(int k, int x) {
 }
 ```
 
-#### 1.2 加强模板
+### 3. 加强模板
 
-+ 加强模板和普通模板的区别在于第 4 和第 5 个功能的区别。加强模板可以按插入的顺序删除，普通模板只能按照内存的存储下标来删除，其实他们的本质是一样的。
+和普通模板的区别在于第 4 和第 5 个功能的区别。加强模板可以按插入的顺序删除，普通模板只能按照内存的存储下标来删除，其实他们的本质是一样的。
 
 ```cpp
 // h[N]存储堆中的值, h[1]是堆顶，x的左儿子是2x, 右儿子是2x + 1
@@ -96,20 +103,17 @@ void heap_swap(int a, int b)
 // 时间复杂度 log(n)
 void down(int u)
 {
-    int t = u;// t就是最小值的位置
+    int t = u;
     if (u * 2 <= size && h[u * 2] < h[t]) t = u * 2;
     if (u * 2 + 1 <= size && h[u * 2 + 1] < h[t]) t = u * 2 + 1;
-    if (u != t)
-    {
+    if (u != t) {
         heap_swap(u, t);
         down(t);
     }
 }
 
-void up(int u)
-{
-    while (u / 2 && h[u] < h[u / 2])
-    {
+void up(int u) {
+    while (u / 2 && h[u] < h[u / 2]) {
         heap_swap(u, u / 2);
         u >>= 1;
     }
@@ -121,7 +125,7 @@ for (int i = n / 2; i; i -- ) down(i);
 // 1. 插入一个数
 void insert(int x) {
     h[++size] = x;
-    ph[++m] = size; // m为当前插入的序号
+    ph[++m] = size;
     hp[size] = m;
     up(size);  
 }
@@ -155,30 +159,4 @@ void update(int k, int x) {
     up(k);
 }
 ```
-
-### 2. 基本概念
-
-堆就是一个完全二叉树。
-
-小根堆：每个节点都是小于等于左右儿子的，根节点就是整个数据结构的最小值。
-
-存储方式：一个一维数组。根节点是 1 号，左儿子是 2x，右儿子是 2x+1。
-
-### 3. 建堆
-
-i 为什么从 n/2 开始down？首先要明确要进行 down 操作时必须满足左儿子和右儿子已经是个堆。开始创建堆的时候，元素是随机插入的，所以不能从根节点开始 down，而是要找到满足下面三个性质的结点：
-
-1. 左右儿子满足堆的性质。
-
-2. 下标最大（因为要往上遍历）
-
-3. 不是叶结点（叶节点一定满足堆的性质）
-
-### 4. 如何手写一个堆（小顶堆）？
-
-1. 插入一个数：`heap[++size] = x; up(size);`
-2. 求集合中的最小值：`heap[1];`
-3. 删除最小值：`heap[1] = heap[size]; size--; down(1);`
-4. 删除任意一个元素：`heap[k] = heap[size]; size--; down(k); up(k);`
-5. 修改任意一个元素：`heap[k] = x; down(k); up(k);`
 
